# TelePath

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: benchmark.yml  ci.yml  io_uring-native.yml
docs/: ci.md  experiment.md  state.md  state1.md  state2.md  test.md  tree.md
docs/archive/: archive1.md  archive2.md
docs/mermaid/: architecture-state1.mmd  architecture.mmd
localization/: README.zh-CN.md
localization/web-console/: en.json  zh-CN.json
scripts/bench/: matrix.sh  run.sh  summarize.py  sweep.sh
scripts/lib/: cmake.sh
scripts/test/: asan.sh  debug.sh  io_uring_debug.sh  io_uring_native.sh
scripts/web/: serve.sh
src/cpp/: CMakeLists.txt
src/cpp/include/telepath/buffer/: buffer_descriptor.h  buffer_handle.h  buffer_manager.h
src/cpp/include/telepath/common/: status.h  types.h
src/cpp/include/telepath/io/: disk_backend.h  disk_backend_factory.h  disk_backend_options.h  io_uring_disk_backend.h  io_uring_disk_backend_test_peer.h  posix_disk_backend.h
src/cpp/include/telepath/options/: buffer_manager_options.h
src/cpp/include/telepath/replacer/: clock_replacer.h  lru_k_replacer.h  lru_replacer.h  replacer.h  two_queue_replacer.h
src/cpp/include/telepath/telemetry/: telemetry_sink.h
src/cpp/lib/buffer/: buffer_descriptor_state.cc  buffer_descriptor_state.h  buffer_handle.cc  buffer_manager.cc  buffer_manager_cleaner.cc  buffer_manager_eviction.cc  buffer_manager_flush.cc  buffer_manager_handle.cc  buffer_manager_lifecycle.cc  buffer_manager_observer.cc  buffer_manager_observer.h  buffer_manager_read.cc  cleaner_controller.cc  cleaner_controller.h  completion_dispatcher.cc  completion_dispatcher.h  flush_scheduler.cc  flush_scheduler.h  frame_memory_pool.h  miss_coordinator.cc  miss_coordinator.h  page_table.cc  page_table.h
src/cpp/lib/io/: disk_backend_factory.cc  io_uring_disk_backend.cc  posix_disk_backend.cc
src/cpp/lib/replacer/: clock_replacer.cc  lru_k_replacer.cc  lru_replacer.cc  two_queue_replacer.cc
src/cpp/lib/telemetry/: counter_telemetry_sink.cc  noop_telemetry_sink.cc  shared_memory_telemetry.cc  telemetry_export.cc
support/: bench.sh  bench_sweep.sh  build_asan.sh  build_debug.sh  build_lsan.sh  install_build_deps.sh  install_dev_tools.sh  test.sh  test_asan.sh
test/: CMakeLists.txt
test/cpp/: benchmark_main.cc  handle_test.cc  lru_k_behavior_test.cc  options_test.cc  replacer_test.cc  same_page_miss_test.cc
test/cpp/benchmark/: benchmark_json_output_test.cc  benchmark_main.cc  benchmark_support.h  benchmark_workload_test.cc  completion_order_test.cc
test/cpp/buffer/: async_flush_scheduler_test.cc  buffer_descriptor_state_test.cc  buffer_test_support.h  completion_dispatcher_test.cc  concurrency_test.cc  different_page_parallel_miss_test.cc  dirty_eviction_failure_recovery_test.cc  eviction_test.cc  failure_path_test.cc  flush_all_persistence_test.cc  flush_consistency_test.cc  frame_snapshot_test.cc  handle_test.cc  init_failure_test.cc  memory_layout_test.cc  miss_coordinator_test.cc  page_table_test.cc  read_lock_flush_test.cc  resource_exhaustion_test.cc  same_page_miss_failure_recovery_test.cc  same_page_miss_test.cc  smoke_test.cc  wait_evict_interleave_test.cc
test/cpp/config/: options_test.cc
test/cpp/io/: completion_dispatcher_idle_test.cc  disk_backend_factory_test.cc  disk_backend_test.cc  io_test_support.h  io_uring_backend_stub_test.cc  io_uring_backend_test.cc  io_uring_edge_cases_test.cc  io_uring_failure_paths_test.cc  io_uring_multi_inflight_test.cc  io_uring_shutdown_drain_test.cc  io_uring_shutdown_wait_test.cc  read_zero_fill_test.cc
test/cpp/replacer/: lru_k_behavior_test.cc  replacer_test.cc  two_queue_behavior_test.cc
test/cpp/telemetry/: telemetry_test.cc
test/python/: benchmark_summarize_test.py  web_backend_parser_test.py  web_frontend_contract_test.py
web/backend/: server.py
web/frontend/: app.js  index.html  styles.css
web/frontend/css/: base.css  components.css
web/frontend/js/: app.js
web/frontend/js/core/: api.js  i18n.js  state.js
web/frontend/js/ui/: block-map.js  forms.js  renderers.js
